--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap" rel="stylesheet">
     <title>Spotify Lyrics Player</title>
     <style>
       * {
@@ -24,9 +21,10 @@
         min-height: 100vh;
       }
     </style>
+    <script type="module" crossorigin src="/assets/main-DEPOEpi0.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-DzDV792c.css">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
