--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/spotify-lyrics-test/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify Lyrics Player</title>
     <style>
@@ -21,8 +21,8 @@
         min-height: 100vh;
       }
     </style>
-    <script type="module" crossorigin src="/assets/main-DEPOEpi0.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-DzDV792c.css">
+    <script type="module" crossorigin src="/spotify-lyrics-test/assets/main-Cm0OtsuG.js"></script>
+    <link rel="stylesheet" crossorigin href="/spotify-lyrics-test/assets/main-DzDV792c.css">
   </head>
   <body>
     <div id="root"></div>
