Fix build errors and rename to Spotify Lyrics
- Fixed TypeScript errors blocking production build
- Fixed index.html to work in both dev and production modes
- Renamed app from 'Spotify Lyrics Player' to 'Spotify Lyrics' across all files
- Updated package name, manifest files, UI text, tests, and documentation
- Verified production build works correctly

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/spotify-lyrics-test/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Spotify Lyrics Player</title>
+    <title>Spotify Lyrics</title>
     <style>
       * {
         box-sizing: border-box;
@@ -21,10 +21,9 @@
         min-height: 100vh;
       }
     </style>
-    <script type="module" crossorigin src="/spotify-lyrics-test/assets/main-Cm0OtsuG.js"></script>
-    <link rel="stylesheet" crossorigin href="/spotify-lyrics-test/assets/main-DzDV792c.css">
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
