--- a/log-viewer.html
+++ b/log-viewer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Spotify Lyrics Player - Log Viewer</title>
+  <title>Spotify Lyrics - Log Viewer</title>
   <style>
     body {
       font-family: monospace;
@@ -54,7 +54,7 @@
   </style>
 </head>
 <body>
-  <h1>Spotify Lyrics Player - Log Viewer</h1>
+  <h1>Spotify Lyrics - Log Viewer</h1>
   <div class="controls">
     <button onclick="loadLogs()">Refresh Logs</button>
     <button onclick="clearLogs()">Clear Console Logs</button>
